# ethglobal-hachakthon

./: .dockerignore  .gitignore  Dockerfile  README.md  baseContract.json  coinmarket_crawler.ts  docker-compose.yml  fetch_data.ts  main.py  meme-coins-details.json  meme-coins.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test.ts  test2.ts  tsconfig.json
chatbot-frontend/: package-lock.json  package.json
chatbot-frontend/components/Chat/: Chat.tsx  ChatInput.tsx  ChatMessage.tsx  ResetChat.tsx
chatbot-frontend/components/Layout/: Navbar.tsx
chatbot-frontend/pages/: index.tsx
chatbot-frontend/utils/: api.ts
otoco/: otoco_tooling.py
otoco/tools/: action.py  constants.py  entity_creation.py  otoco_tool.py
src/: index.ts  server.ts
src/providers/cerox/: cerox.ts  constants.ts  index.ts  schemas.ts
src/providers/trending-memecoins/: coins-fetch.ts  example-output.json  index.ts  schemas.ts  trending-memecoins.ts
