[project]
name = "ethglobal-january-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdp-langchain>=0.0.13",
    "langchain-community>=0.3.16",
    "langchain-google-genai>=2.0.9",
    "python-dotenv>=1.0.1",
    "twikit>=2.2.2",
]
